Added the comments to the index.html

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 	
 			<div class="row margin-small">
 				<div class="col-md-6">
+					
+					<!--  trigger button for the simple modal	-->
 					<button type="button"class="btn btn-primary" data-toggle="modal" data-target="#fullscreen">
 					click to launch basic fullscreen modal
 					</button>
 				</div>
 
 				<div class="col-md-6">
+
+					<!-- 	trigger button for the stylish modal	-->
 					<button type="button"class="btn btn-primary" data-toggle="modal" data-target="#fullscreen-s">
 					click to launch more stylish fullscreen modal
 					</button>
